--- a/Simple Housing Price Prediction/Data Science Regression Project_Predicting Home Prices.ipynb
+++ b/Simple Housing Price Prediction/Data Science Regression Project_Predicting Home Prices.ipynb
@@ -2848,34 +2848,95 @@
     }
    ],
    "source": [
-    "predict_price('1st Phase JP Nagar',1000, 2, 2)\n",
-    "\n",
     "predict_price('Indira Nagar',1000, 3, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "id": "deec5171-77a2-46ab-baa0-8333dc868aa0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hs/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "86.08062284981497"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('1st Phase JP Nagar',1000, 3, 3)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "id": "c2348589-1eab-43f3-8ed9-29e43620ba29",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/hs/anaconda3/lib/python3.12/site-packages/sklearn/base.py:493: UserWarning: X does not have valid feature names, but LinearRegression was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "83.86570258306718"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict_price('1st Phase JP Nagar',1000, 2, 2)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
+   "id": "cd3a0f21-9b7f-46e8-9a72-ffd56d0c146b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Export the tested model to a pickle file\n",
+    "import pickle\n",
+    "with open('banglore_home_prices_model.pickle','wb') as f:\n",
+    "    pickle.dump(lr_clf,f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
    "id": "d5891caf-2ea3-4867-9fb8-7335203374af",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Export location and column information to a file that will be useful later on in our prediction application\n",
+    "import json\n",
+    "columns = {\n",
+    "    'data_columns' : [col.lower() for col in X.columns]\n",
+    "}\n",
+    "with open(\"columns.json\",\"w\") as f:\n",
+    "    f.write(json.dumps(columns))"
+   ]
   },
   {
    "cell_type": "code",
